--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "dotfiles/vim/bundle/html-template-syntax"]
 	path = dotfiles/vim/bundle/html-template-syntax
 	url = https://github.com/pbrisbin/html-template-syntax.git
+[submodule "dotfiles/vim/bundle/vim-coffee-script"]
+	path = dotfiles/vim/bundle/vim-coffee-script
+	url = https://github.com/kchmck/vim-coffee-script.git
