--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "dotfiles/vim/bundle/vim-coffee-script"]
 	path = dotfiles/vim/bundle/vim-coffee-script
 	url = https://github.com/kchmck/vim-coffee-script.git
+[submodule "dotfiles/vim/bundle/vim-json"]
+	path = dotfiles/vim/bundle/vim-json
+	url = https://github.com/leshill/vim-json
