--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "dotfiles/vim/bundle/vim-json"]
 	path = dotfiles/vim/bundle/vim-json
 	url = https://github.com/leshill/vim-json
+[submodule "dotfiles/vim/bundle/vim-snippets"]
+	path = dotfiles/vim/bundle/vim-snippets
+	url = https://github.com/honza/vim-snippets.git
