--- a/tmux.conf
+++ b/tmux.conf
@@ -39,3 +39,10 @@ set -g status-right-length 60
 set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl ipecho.net/plain;echo)::"
 set -g status-justify left
 set -g status-right '#{?client_prefix,#[reverse]C-b#[noreverse],} #[fg=Cyan]#S #[fg=white]%a %d %b %R'
+
+# Use mouse
+
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
