enable tmux vi mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ bind r source-file ~/.tmux.conf
 # setw -g xterm-keys on
 
 # Use vim bindings
-# setw -g mode-keys vi
+setw -g mode-keys vi
 
 
 # Remap window navigation to vim
