--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,6 @@ bind r source-file ~/.tmux.conf
 # Use vim bindings
 setw -g mode-keys vi
 
-
 # Remap window navigation to vim
 unbind-key j
 bind-key j select-pane -D
@@ -46,3 +45,11 @@ setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
