--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ unbind-key l
 bind-key l select-pane -R
 
 # Set colors
-set-option -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 # Count sessions start at 1
 set -g base-index 1
@@ -41,15 +41,13 @@ set -g status-right '#{?client_prefix,#[reverse]C-b#[noreverse],} #[fg=Cyan]#S #
 
 # Use mouse
 
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
