--- a/tmux.conf
+++ b/tmux.conf
@@ -28,8 +28,10 @@ set -g base-index 1
 set -g set-titles on
 set -g set-titles-string '#(whoami) :: #h :: #(curl ipecho.net/plain;echo)'
 
+# Don't rename windows
+set -g allow-rename off
+
 # Set status bar
-set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 5
