--- a/tmux.conf
+++ b/tmux.conf
@@ -51,3 +51,5 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+bind -t vi-copy y copy-pipe "DISPLAY=:0 xclip -sel clip -i"
