get rid of bash config

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ unbind-key l
 bind-key l select-pane -R
 
 # Set colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # Count sessions start at 1
 set -g base-index 1
@@ -51,11 +51,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# xclip integration
-
-bind -t vi-copy y copy-pipe "DISPLAY=:0 xclip -sel clip -i"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+# xclip integration
+if-shell "uname | grep -q Linux" 'source ~/.tmux-linux.conf'
