--- a/tmux.conf
+++ b/tmux.conf
@@ -1,35 +1,45 @@
-# Tmux settings
+# zsh default shell
+set-option -g default-command $SHELL
+set-option -g default-shell $SHELL
 
-# Set XTerm key bindings
-# setw -g xterm-keys on
+# Vim-like pane navigation (Prefix + hjkl)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind H swap-pane -D
+bind L swap-pane -U
+
+# -- Basic Settings ------------------------------------------
+set -g prefix C-b
+set -g escape-time 500
+set -g history-limit 10000
 
 # Use vim bindings
 setw -g mode-keys vi
 
-# Remap window navigation to vim
-unbind-key j
-bind-key j select-pane -D
-unbind-key k
-bind-key k select-pane -U
-unbind-key h
-bind-key h select-pane -L
-unbind-key l
-bind-key l select-pane -R
-
 # Set colors
 set -g default-terminal "tmux-256color"
 
+# Use mouse
+set -g mouse on
+
 # Count sessions start at 1
 set -g base-index 1
-
-# Set the title bar
-set -g set-titles on
-set -g set-titles-string '#(whoami) :: #h :: #(curl ipecho.net/plain;echo)'
+setw -g pane-base-index 1
 
 # Don't rename windows
 set -g allow-rename off
 
-# Set status bar
+# Set the title bar
+set -g set-titles on
+set -g set-titles-string '#(whoami) :: #h :: #(curl ipecho.net/plain;echo)'
+#
+# Don't rename windows
+set -g allow-rename off
+
+# -- Status Bar ---------------------------------------------
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 5
@@ -39,16 +49,16 @@ set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[f
 set -g status-justify left
 set -g status-right '#{?client_prefix,#[reverse]C-b#[noreverse],} #[fg=Cyan]#S #[fg=white]%a %d %b %R'
 
-# Use mouse
-
-set -g mouse on
-
-# List of plugins
+# -- Plugins -----------------------------------------------
+# Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Other plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX plugin manager
+# Keep this line at the very bottom of tmux.conf
 run '~/.tmux/plugins/tpm/tpm'
+
